force-app/main/default/objects/Display_Entry__mdt/Display_Entry__mdt.object-meta.xml
<CustomObject>
    <description>Content available to the Rich Text Custom Label Display Lightning Web Component</description>
    <label>Display Entry</label>
    <pluralLabel>Display Entries</pluralLabel>
</CustomObject>