force-app/main/default/objects/Display_Entry__mdt/fields/DisplayStyle__c.field-meta.xml
<CustomField>
    <fullName>DisplayStyle__c</fullName>
    <label>Display Style</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Card</fullName>
                <default>true</default>
                <label>Card</label>
            </value>
            <value>
                <fullName>Tile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>