force-app/main/default/objects/Display_Entry__mdt/fields/IsTitled__c.field-meta.xml
<CustomField>
    <fullName>IsTitled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Display Title?</label>
    <type>Checkbox</type>
</CustomField>